# services/progress-service/docs/swagger.json
@@ -48,7 +48,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/service.ProgressResponse"
+                                            "$ref": "#/definitions/response.ProgressResponse"
                                         }
                                     }
                                 }
@@ -102,7 +102,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.AddHabitRequest"
+                            "$ref": "#/definitions/request.AddHabitRequest"
                         }
                     }
                 ],
@@ -227,7 +227,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.AddWeightRequest"
+                            "$ref": "#/definitions/request.AddWeightRequest"
                         }
                     }
                 ],
@@ -354,6 +354,31 @@
                 }
             }
         },
+        "request.AddHabitRequest": {
+            "type": "object",
+            "properties": {
+                "completed": {
+                    "type": "boolean"
+                },
+                "habitName": {
+                    "type": "string"
+                },
+                "notes": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.AddWeightRequest": {
+            "type": "object",
+            "properties": {
+                "notes": {
+                    "type": "string"
+                },
+                "weightKg": {
+                    "type": "number"
+                }
+            }
+        },
         "response.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -371,41 +396,7 @@
                 }
             }
         },
-        "response.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "service.AddHabitRequest": {
-            "type": "object",
-            "properties": {
-                "completed": {
-                    "type": "boolean"
-                },
-                "habitName": {
-                    "type": "string"
-                },
-                "notes": {
-                    "type": "string"
-                }
-            }
-        },
-        "service.AddWeightRequest": {
-            "type": "object",
-            "properties": {
-                "notes": {
-                    "type": "string"
-                },
-                "weightKg": {
-                    "type": "number"
-                }
-            }
-        },
-        "service.ProgressResponse": {
+        "response.ProgressResponse": {
             "type": "object",
             "properties": {
                 "habitLogs": {
@@ -419,6 +410,15 @@
                     "items": {
                         "$ref": "#/definitions/repository.WeightLog"
                     }
+                }
+            }
+        },
+        "response.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
                 }
             }
         }
